--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
-languageCode: "jp"
+languageCode: "en"
 metaDataFormat: "yaml"
 title: "MLSBLG"
-baseURL: "https://sheep-shearer-brian-85750.netlify.com/"
+baseURL: "/"
 rssuri: "feed.xml"
 copyright: "2012 rnelo_so, all rights reserved."
 theme: "hugo-zen-mod"
